# produits/app/Http/Swagger/schemas/models/ProductModel.php
@@ -1,0 +1,24 @@
+<?php
+
+/**
+ *
+ * @OA\Schema(
+ *     schema="ProductModel",
+ *     @OA\Property(
+ *         property="name",
+ *         type="string",
+ *     ),
+ *     @OA\Property(
+ *         property="description",
+ *         type="string",
+ *     ),
+ *     @OA\Property(
+ *         property="is_active",
+ *         type="boolean",
+ *     ),
+ *     @OA\Property(
+ *         property="quantity_in_stock",
+ *         type="integer",
+ *     ),
+ * )
+ */
