# produits/storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Clients API docs",
-        "description": "This is Clients API documentation",
+        "title": "Product API docs",
+        "description": "This is Product API documentation",
         "contact": {
             "email": "yassine.mechiche@gmail.com"
         },
@@ -14,25 +14,25 @@
     },
     "servers": [
         {
-            "url": "http://localhost/microservices/clients/public"
+            "url": "http://localhost/microservices/produits/public"
         }
     ],
     "paths": {
-        "/api/clients": {
+        "/api/products": {
             "get": {
                 "tags": [
-                    "Clients"
+                    "Products"
                 ],
-                "summary": "Get list of clients",
-                "description": "Get list of clients",
-                "operationId": "listClients",
+                "summary": "Get list of products",
+                "description": "Get list of products",
+                "operationId": "listProducts",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/listClientResponse"
+                                    "$ref": "#/components/schemas/listProductResponse"
                                 }
                             }
                         }
@@ -71,42 +71,31 @@
             },
             "post": {
                 "tags": [
-                    "Clients"
+                    "Products"
                 ],
-                "summary": "Add a client",
-                "description": "Add a client",
-                "operationId": "AddClient",
+                "summary": "Add a product",
+                "description": "Add a product",
+                "operationId": "AddProduct",
                 "requestBody": {
-                    "description": "Add a client",
+                    "description": "Add a product",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "first_name": {
+                                    "name": {
                                         "description": "Nom",
                                         "type": "string"
                                     },
-                                    "last_name": {
-                                        "description": "Prénom",
+                                    "description": {
+                                        "description": "Description",
                                         "type": "string"
                                     },
-                                    "email": {
-                                        "description": "Email",
-                                        "type": "string",
-                                        "format": "email"
+                                    "is_active": {
+                                        "type": "boolean"
                                     },
-                                    "login": {
-                                        "description": "Login",
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "description": "Mot de passe",
-                                        "type": "string"
-                                    },
-                                    "phone": {
-                                        "description": "Téléphone",
-                                        "type": "string"
+                                    "quantity_in_stock": {
+                                        "type": "integer"
                                     }
                                 },
                                 "type": "object"
@@ -158,19 +147,19 @@
                 }
             }
         },
-        "/api/clients/{id}": {
+        "/api/products/{id}": {
             "get": {
                 "tags": [
-                    "Clients"
+                    "Products"
                 ],
-                "summary": "Get client details",
-                "description": "Get client details",
-                "operationId": "clientDetail",
+                "summary": "Get product details",
+                "description": "Get product details",
+                "operationId": "productDetail",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Client id",
+                        "description": "Product id",
                         "required": true
                     }
                 ],
@@ -180,7 +169,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/detailClientResponse"
+                                    "$ref": "#/components/schemas/detailProductResponse"
                                 }
                             }
                         }
@@ -219,50 +208,39 @@
             },
             "put": {
                 "tags": [
-                    "Clients"
+                    "Products"
                 ],
-                "summary": "Update a client",
-                "description": "Update a client",
-                "operationId": "UpdateClient",
+                "summary": "Update a product",
+                "description": "Update a product",
+                "operationId": "UpdateProduct",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Client id",
+                        "description": "Product id",
                         "required": true
                     }
                 ],
                 "requestBody": {
-                    "description": "Update a client",
+                    "description": "Update a product",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "first_name": {
+                                    "name": {
                                         "description": "Nom",
                                         "type": "string"
                                     },
-                                    "last_name": {
-                                        "description": "Prénom",
+                                    "description": {
+                                        "description": "Description",
                                         "type": "string"
                                     },
-                                    "email": {
-                                        "description": "Email",
-                                        "type": "string",
-                                        "format": "email"
+                                    "is_active": {
+                                        "type": "boolean"
                                     },
-                                    "login": {
-                                        "description": "Login",
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "description": "Mot de passe",
-                                        "type": "string"
-                                    },
-                                    "phone": {
-                                        "description": "Téléphone",
-                                        "type": "string"
+                                    "quantity_in_stock": {
+                                        "type": "integer"
                                     }
                                 },
                                 "type": "object"
@@ -315,16 +293,16 @@
             },
             "delete": {
                 "tags": [
-                    "Clients"
+                    "Products"
                 ],
-                "summary": "Delete a client",
-                "description": "Delete a client",
+                "summary": "Delete a product",
+                "description": "Delete a product",
                 "operationId": "deleteUser",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "Client id",
+                        "description": "Product id",
                         "required": true
                     }
                 ],
@@ -493,7 +471,7 @@
                 },
                 "type": "object"
             },
-            "detailClientResponse": {
+            "detailProductResponse": {
                 "required": [
                     "base_url",
                     "status",
@@ -515,12 +493,12 @@
                         "type": "string"
                     },
                     "data": {
-                        "$ref": "#/components/schemas/ClientModel"
+                        "$ref": "#/components/schemas/ProductModel"
                     }
                 },
                 "type": "object"
             },
-            "listClientResponse": {
+            "listProductResponse": {
                 "required": [
                     "base_url",
                     "status",
@@ -544,32 +522,25 @@
                     "data": {
                         "type": "array",
                         "items": {
-                            "$ref": "#/components/schemas/ClientModel"
+                            "$ref": "#/components/schemas/ProductModel"
                         }
                     }
                 },
                 "type": "object"
             },
-            "ClientModel": {
+            "ProductModel": {
                 "properties": {
-                    "first_name": {
+                    "name": {
                         "type": "string"
                     },
-                    "last_name": {
+                    "description": {
                         "type": "string"
                     },
-                    "email": {
-                        "type": "string",
-                        "format": "email"
+                    "is_active": {
+                        "type": "boolean"
                     },
-                    "login": {
-                        "type": "string"
-                    },
-                    "password": {
-                        "type": "string"
-                    },
-                    "phone": {
-                        "type": "string"
+                    "quantity_in_stock": {
+                        "type": "integer"
                     }
                 },
                 "type": "object"
@@ -578,8 +549,8 @@
     },
     "tags": [
         {
-            "name": "Clients",
-            "description": "Clients routes"
+            "name": "Products",
+            "description": "Products routes"
         }
     ],
     "security": [
